yo/yo_core.h

////////////////////////////////////////////////////////////////
//
//
// Types
//
//
////////////////////////////////////////////////////////////////

typedef uint64_t yo_id_t;
typedef uint32_t yo_error_t;
// TODO(rune): Better explanations
// TODO(rune): Some kind of wrapping layout like CSS flexbox
// Determines how yo_box_node arranges its children
typedef uint32_t yo_layout_t;
typedef uint32_t yo_overflow_t;
typedef uint32_t yo_popup_flags_t;
typedef uint32_t yo_box_flags_t;
typedef uint32_t yo_anim_flags_t;
typedef uint32_t yo_mouse_button_t;
enum yo_mouse_button
{
    YO_MOUSE_BUTTON_LEFT,
    YO_MOUSE_BUTTON_RIGHT,
    YO_MOUSE_BUTTON_MIDDLE,
    YO_MOUSE_BUTTON_COUNT,
};
typedef uint32_t yo_keycode_t;
typedef uint16_t yo_modifier_t;
typedef struct yo_signal yo_signal_t;
struct yo_signal
{
    union { bool left_clicked, clicked; };
    bool right_clicked;

    bool       hovered;
    yo_v2i_t mouse_pos;  // NOTE(rune): Relative to arranged rect

    yo_keycode_t keycode;
    bool is_alt_down;
    bool is_ctrl_down;
    bool is_shift_down;

    bool is_hot;
    bool is_active;
};
typedef struct yo_text_field_state yo_text_field_state_t;
struct yo_placement
{
    union
    {
        struct { yo_length_t h_dim, v_dim; };
        struct { yo_length_t a_dim[2]; };
    };
    union
    {
        struct { yo_align_t h_align, v_align; };
        struct { yo_align_t a_align[2]; };
    };
    yo_sides_f32_t margin;
    yo_sides_f32_t padding;
};
typedef struct yo_border yo_border_t;
typedef struct yo_box yo_box_t;
struct yo_box
{
    char *tag;
    char *text;

    yo_layout_t child_layout;
    yo_border_t border;
    yo_v4f_t    fill;
    uint32_t    font_size;
    yo_v4f_t    font_color;
    bool        on_top;

    union { struct yo_placement placement; struct yo_placement; };

    union
    {
        struct { yo_overflow_t h_overflow, v_overflow; };
        struct { yo_overflow_t a_overflow[2]; };
    };

    yo_v2f_t target_scroll_offset;
    yo_v2f_t scroll_offset;

    // NOTE(rune): Controls which properties are animated.
    yo_anim_flags_t anim;

    // NOTE(rune): All animations play at the same rate. If you want different animation rates,
    // for different properties, you need to split them up into multiple boxes.
    float anim_rate;

    // TODO(rune): We could just make size of the persistent state user defined, which would allow the
    // user code could store anything across frame.
    yo_text_field_state_t text_field_state;
};
////////////////////////////////////////////////////////////////
//
//
// Input
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_input_begin(void);
YO_API void             yo_input_mouse_state(bool buttons[YO_MOUSE_BUTTON_COUNT], uint32_t x, uint32_t y);
YO_API void             yo_input_mouse_click(yo_mouse_button_t button, uint32_t x, uint32_t y, yo_modifier_t modifiers);
YO_API void             yo_input_scroll(float x, float y);
YO_API void             yo_input_key(yo_keycode_t key, yo_modifier_t modifiers);
YO_API void             yo_input_char(char c, yo_modifier_t modifiers);
YO_API void             yo_input_unicode(uint32_t codepoint, yo_modifier_t modifiers);
YO_API void             yo_input_end(void);
YO_API yo_v2i_t         yo_query_mouse_pos();
YO_API bool             yo_query_mouse_button(yo_mouse_button_t button);      // NOTE(m2dx): Was mouse button down during frame?
YO_API bool             yo_query_mouse_button_down(yo_mouse_button_t button); // NOTE(m2dx): Did mouse button change from up->down during frame?
YO_API bool             yo_query_mouse_button_up(yo_mouse_button_t button);   // NOTE(m2dx): Dis mouse button change from down->up during frame?
YO_API yo_v2f_t         yo_query_scroll();
// TODO(rune): Procedures for querying keyboard state.

YO_API float            yo_delta();
////////////////////////////////////////////////////////////////
//
//
// Id
//
//
////////////////////////////////////////////////////////////////

#define YO_ID_NONE      ((yo_id_t)(0x0000'0000'0000'0000))
#define YO_ID_ROOT      ((yo_id_t)(0xffff'ffff'ffff'ffff))
#define yo_id(...)      yo_id_from_format(__VA_ARGS__) // TODO(rune): If only 1 arg is supplied, we could just use yo_id_from_string instead, to be more efficient.
YO_API yo_id_t          yo_id_from_string(char *string);
YO_API yo_id_t          yo_id_from_format(YO_PRINTF_FORMAT_STRING char *format, ...);
YO_API yo_id_t          yo_id_from_format_v(char *format, va_list args);
YO_API void             yo_push_id(yo_id_t id);
YO_API yo_id_t          yo_pop_id(void);
////////////////////////////////////////////////////////////////
//
//
// Box
//
//
////////////////////////////////////////////////////////////////

YO_API yo_box_t *       yo_box(yo_id_t id, yo_box_flags_t flags);
YO_API yo_signal_t      yo_get_signal(yo_box_t *box);
YO_API yo_recti_t       yo_get_screen_rect(yo_box_t *box);
YO_API yo_rectf_t       yo_get_arranged_rect(yo_box_t *box);
YO_API yo_v2f_t         yo_get_content_dim(yo_box_t *box);
YO_API yo_box_t *       yo_new(void);
////////////////////////////////////////////////////////////////
//
//
// Children
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_begin_children(void);
YO_API void             yo_begin_children_of(yo_box_t *box);
YO_API void             yo_end_children(void);
////////////////////////////////////////////////////////////////
//
//
// Popup
//
//
////////////////////////////////////////////////////////////////

// WARNING(rune): Not finished
YO_API void             yo_open_popup(yo_id_t id, yo_popup_flags_t flags);
YO_API bool             yo_begin_popup(yo_id_t id);
YO_API void             yo_end_popup();
////////////////////////////////////////////////////////////////
//
//
// Scaled
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_scaled_triangle(yo_v2f_t p0, yo_v2f_t p1, yo_v2f_t p2, yo_v4f_t color0, yo_v4f_t color1, yo_v4f_t color2);
YO_API void             yo_scaled_checkmark(yo_v4f_t color);
////////////////////////////////////////////////////////////////
//
//
// Memory
//
//
////////////////////////////////////////////////////////////////

YO_API void *           yo_alloc_temp(size_t size);
// NOTE(rune): Temporary string allocations return a pointer to "" instead of NULL, if the allocation fails.
YO_API char *           yo_alloc_temp_string(YO_PRINTF_FORMAT_STRING const char *format, ...);
////////////////////////////////////////////////////////////////
//
//
// Errors
//
//
////////////////////////////////////////////////////////////////

YO_API yo_error_t       yo_get_error(void);
YO_API char *           yo_get_error_message(void);
////////////////////////////////////////////////////////////////
//
//
// Debug
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_debug_show_atlas_partitions(void);
YO_API void             yo_debug_show_atlas_texture(void);