yo_csharp/yo_native.core.cs


    ////////////////////////////////////////////////////////////////
    //
    //
    // Input
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern void yo_input_begin();
    // [DllImport("yo_dll.dll")] public static extern void yo_input_mouse_state(bool buttons[YO_MOUSE_BUTTON_COUNT], uint32_t x, uint32_t y); TODO(rune): How to port statically sized bool arrays?
    [DllImport("yo_dll.dll")] public static extern void yo_input_mouse_click(yo_mouse_button_t button, uint32_t x, uint32_t y, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_scroll(float x, float y);
    [DllImport("yo_dll.dll")] public static extern void yo_input_key(yo_keycode_t key, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_char(char c, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_unicode(uint32_t codepoint, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_end();
    [DllImport("yo_dll.dll")] public static extern yo_v2i_t yo_query_mouse_pos();
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button(yo_mouse_button_t button);      // NOTE(m2dx): Was mouse button down during frame?
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button_down(yo_mouse_button_t button); // NOTE(m2dx): Did mouse button change from up->down during frame?
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button_up(yo_mouse_button_t button);   // NOTE(m2dx): Dis mouse button change from down->up during frame?
    [DllImport("yo_dll.dll")] public static extern yo_v2f_t yo_query_scroll();

    // TODO(rune): Procedures for querying keyboard state.

    [DllImport("yo_dll.dll")] public static extern float yo_delta();

    ////////////////////////////////////////////////////////////////
    //
    //
    // Id
    //
    //
    ////////////////////////////////////////////////////////////////

    /*
#define YO_ID_NONE      ((yo_id_t)(0x0000'0000'0000'0000))
#define YO_ID_ROOT      ((yo_id_t)(0xffff'ffff'ffff'ffff))
#define yo_id(...)      yo_id_from_format(__VA_ARGS__) // TODO(rune): If only 1 arg is supplied, we could just use yo_id_from_string instead, to be more efficient.
    */

    public const yo_id_t YO_ID_NONE = 0;
    public const yo_id_t YO_ID_ROOT = 0xffff_ffff_ffff_ffff;

    // TODO(rune): How to port yo_id(...) ???

    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_string(char* string_);
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_format(char* format, __arglist);
    // [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_format_v(char* format, va_list args);
    [DllImport("yo_dll.dll")] public static extern void yo_push_id(yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_pop_id();


    ////////////////////////////////////////////////////////////////
    //
    //
    // Box
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_box(yo_id_t id, yo_box_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern yo_signal_t yo_get_signal(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_recti_t yo_get_screen_rect(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_rectf_t yo_get_arranged_rect(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_v2f_t yo_get_content_dim(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_new();

    ////////////////////////////////////////////////////////////////
    //
    //
    // Children
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern void yo_begin_children();
    [DllImport("yo_dll.dll")] public static extern void yo_begin_children_of(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern void yo_end_children();

    ////////////////////////////////////////////////////////////////
    //
    //
    // Popup
    //
    //
    ////////////////////////////////////////////////////////////////

    // WARNING(rune): Not finished
    [DllImport("yo_dll.dll")] public static extern void yo_open_popup(yo_id_t id, yo_popup_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern bool yo_begin_popup(yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern void yo_end_popup();

    ////////////////////////////////////////////////////////////////
    //
    //
    // Scaled
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern void yo_scaled_triangle(yo_v2f_t p0, yo_v2f_t p1, yo_v2f_t p2, yo_v4f_t color0, yo_v4f_t color1, yo_v4f_t color2);
    [DllImport("yo_dll.dll")] public static extern void yo_scaled_checkmark(yo_v4f_t color);

    ////////////////////////////////////////////////////////////////
    //
    //
    // Memory
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern void* yo_alloc_temp(size_t size);

    // NOTE(rune): Temporary string allocations return a pointer to "" instead of NULL, if the allocation fails.
    [DllImport("yo_dll.dll")] public static extern char* yo_alloc_temp_string(char* format, __arglist);

    ////////////////////////////////////////////////////////////////
    //
    //
    // Errors
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern yo_error_t yo_get_error();
    [DllImport("yo_dll.dll")] public static extern char* yo_get_error_message();

    ////////////////////////////////////////////////////////////////
    //
    //
    // Debug
    //
    //
    ////////////////////////////////////////////////////////////////

    [DllImport("yo_dll.dll")] public static extern void yo_debug_show_atlas_partitions();
    [DllImport("yo_dll.dll")] public static extern void yo_debug_show_atlas_texture();
}
